fixing spacing

--- a/styles.css
+++ b/styles.css
@@ -790,7 +790,7 @@ path {
     .about-img {
         width: 300px;
         height: 310px;
-        margin: 0 0 25% 0;
+        margin: 0 0 10% 0;
         box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.295);
     }
     
@@ -798,8 +798,8 @@ path {
         background-color: #24252A;
         color: whitesmoke;
         width: 100%;
-        padding: 5% 5% 30% 5%;
         margin: 0;
+        padding: 0% 5% 45% 5%;
         display: flex;
         flex-direction: column;
     }
@@ -807,7 +807,7 @@ path {
     .main-title {
         font-size: 40px;
         padding: 5% 2% 0 2%;
-        margin: 75% 0 10% 0;
+        margin: 0% 0 10% 0;
         text-align: center;
     }
 
